# Train_Eda

./: README.md  pyproject.toml
Data/: submission.csv  train_limpio.csv  train_limpio.parquet  train_validation.csv
notebooks/: Analisi3 copy.ipynb  Analisi3.ipynb  Analisis.ipynb  Analisis2.ipynb  submission.csv  train_limpio.csv  train_sample.csv
