[tool.poetry]
name = "computadoras"
version = "0.1.0"
description = ""
authors = ["Andrés Miguel Zaragoza Quintero <77632061+andreszaragoza@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.2.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
polars = "^1.20.0"
requests = "^2.32.3"
spicy = "^0.16.0"
ace = "^0.3.3"
pyarrow = "^19.0.0"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
